k8s/wiremock-uix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiremock-uix
  namespace: wiremock-dashboard
  labels:
    app.kubernetes.io/name: wiremock-uix
    app.kubernetes.io/part-of: wiremock-dashboard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wiremock-uix
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
